@@ -34,6 +34,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.lang.reflect.InvocationTargetException;
 import java.math.BigInteger;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -52,6 +53,8 @@ import java.util.Optional;
 import java.util.regex.Pattern;
 import java.util.zip.DataFormatException;
 
+import javax.faces.context.ExternalContext;
+import javax.faces.context.FacesContext;
 import javax.imageio.ImageIO;
 import javax.imageio.ImageReader;
 import javax.imageio.spi.ImageReaderSpi;
@@ -64,6 +67,7 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -96,6 +100,7 @@ import com.drew.metadata.jpeg.JpegDirectory;
 import com.drew.metadata.png.PngDirectory;
 
 import de.sub.goobi.config.ConfigurationHelper;
+import de.sub.goobi.helper.FacesContextHelper;
 import de.sub.goobi.helper.FilesystemHelper;
 import de.sub.goobi.helper.Helper;
 import de.sub.goobi.helper.NIOFileUtils;
@@ -108,6 +113,7 @@ import de.sub.goobi.helper.exceptions.SwapException;
 import de.sub.goobi.helper.exceptions.UghHelperException;
 import de.sub.goobi.metadaten.MetadatenHelper;
 import de.sub.goobi.metadaten.MetadatenImagesHelper;
+import lombok.Getter;
 import ugh.dl.ContentFile;
 import ugh.dl.DigitalDocument;
 import ugh.dl.DocStruct;
@@ -127,6 +133,7 @@ import ugh.exceptions.WriteException;
 public class ExportMets {
     protected Helper help = new Helper();
     protected Prefs myPrefs;
+    @Getter
     protected List<String> problems = new ArrayList<>();
 
     protected static final Logger logger = LogManager.getLogger(ExportMets.class);
@@ -167,6 +174,39 @@ public class ExportMets {
         return startExport(myProzess, benutzerHome);
     }
 
+    public void downloadMets(Process process) throws ReadException, PreferencesException, WriteException, IOException, InterruptedException,
+    SwapException, DAOException, TypeNotAllowedForParentException {
+        this.myPrefs = process.getRegelsatz().getPreferences();
+        String atsPpnBand = process.getTitel();
+        Fileformat gdzfile = process.readMetadataFile();
+
+        //String zielVerzeichnis = prepareUserDirectory(inZielVerzeichnis);
+        Path targetDir = Files.createTempDirectory("mets_export"); //only save file in /tmp/ directory
+
+        String targetFileName = targetDir.resolve(atsPpnBand + "_mets.xml").toAbsolutePath().toString();
+        writeMetsFile(process, targetFileName, gdzfile, false);
+
+        //download File
+        try (InputStream in = StorageProvider.getInstance().newInputStream(Paths.get(targetFileName))) {
+            FacesContext facesContext = FacesContextHelper.getCurrentFacesContext();
+            ExternalContext ec = facesContext.getExternalContext();
+            ec.responseReset();
+            ec.setResponseHeader("Content-Disposition", "attachment; filename=" + Paths.get(targetFileName).getFileName());
+            ec.setResponseContentLength((int) StorageProvider.getInstance().getFileSize(Paths.get(targetFileName)));
+
+            IOUtils.copy(in, ec.getResponseOutputStream());
+
+            facesContext.responseComplete();
+
+            Helper.setMeldung(null, process.getTitel() + ": ", "Download Finished");
+
+            //delete file from directory
+            StorageProvider.getInstance().deleteDir(targetDir);
+        } catch (Exception e) {
+            logger.error(e);
+        }
+    }
+
     /**
      * DMS-Export an eine gewünschte Stelle
      * 
@@ -196,11 +236,11 @@ public class ExportMets {
         String atsPpnBand = myProzess.getTitel();
         Fileformat gdzfile = myProzess.readMetadataFile();
 
-        String zielVerzeichnis = prepareUserDirectory(inZielVerzeichnis);
+        //String zielVerzeichnis = prepareUserDirectory(inZielVerzeichnis);
+        String zielVerzeichnis = Files.createTempDirectory("mets_export").toAbsolutePath().toString(); //only save file in /tmp/ directory
 
         String targetFileName = zielVerzeichnis + atsPpnBand + "_mets.xml";
         return writeMetsFile(myProzess, targetFileName, gdzfile, false);
-
     }
 
     /**
@@ -385,9 +425,12 @@ public class ExportMets {
         VariableReplacer vp = new VariableReplacer(mm.getDigitalDocument(), this.myPrefs, myProzess, null);
         List<ProjectFileGroup> myFilegroups = myProzess.getProjekt().getFilegroups();
 
+        boolean useOriginalFiles = false;
         if (myFilegroups != null && myFilegroups.size() > 0) {
             for (ProjectFileGroup pfg : myFilegroups) {
-
+                if (pfg.isUseOriginalFiles()) {
+                    useOriginalFiles = true;
+                }
                 // check if source files exists
                 if (pfg.getFolder() != null && pfg.getFolder().length() > 0) {
                     String foldername = myProzess.getMethodFromName(pfg.getFolder());
@@ -402,6 +445,39 @@ public class ExportMets {
                 } else {
                     VirtualFileGroup v = createFilegroup(vp, pfg);
                     mm.getDigitalDocument().getFileSet().addVirtualFileGroup(v);
+                }
+            }
+        }
+
+        if (useOriginalFiles) {
+            // check if media folder contains images
+            List<Path> filesInFolder = StorageProvider.getInstance().listFiles(myProzess.getImagesTifDirectory(false));
+            if (!filesInFolder.isEmpty()) {
+                // compare image names with files in mets file
+                List<DocStruct> pages = dd.getPhysicalDocStruct().getAllChildren();
+                if (pages != null && pages.size() > 0) {
+                    for (DocStruct page : pages) {
+                        Path completeNameInMets = Paths.get(page.getImageName());
+                        String filenameInMets = completeNameInMets.getFileName().toString();
+                        int dotIndex = filenameInMets.lastIndexOf('.');
+                        if (dotIndex != -1) {
+                            filenameInMets = filenameInMets.substring(0, dotIndex);
+                        }
+                        for (Path imageNameInFolder : filesInFolder) {
+                            String imageName = imageNameInFolder.getFileName().toString();
+                            dotIndex = imageName.lastIndexOf('.');
+                            if (dotIndex != -1) {
+                                imageName = imageName.substring(0, dotIndex);
+                            }
+
+                            if (filenameInMets.toLowerCase().equals(imageName.toLowerCase())) {
+                                // found matching filename
+                                page.setImageName(imageNameInFolder.toString());
+                                break;
+                            }
+                        }
+                    }
+                    // replace filename in mets file
                 }
             }
         }
@@ -477,12 +553,9 @@ public class ExportMets {
         } else {
             mm.write(targetFileName);
         }
+
         Helper.setMeldung(null, myProzess.getTitel() + ": ", "ExportFinished");
         return true;
-    }
-
-    public List<String> getProblems() {
-        return problems;
     }
 
     private VirtualFileGroup createFilegroup(VariableReplacer variableRplacer, ProjectFileGroup projectFileGroup) {
@@ -490,7 +563,7 @@ public class ExportMets {
         v.setName(projectFileGroup.getName());
         v.setPathToFiles(variableRplacer.replace(projectFileGroup.getPath()));
         v.setMimetype(projectFileGroup.getMimetype());
-        v.setFileSuffix(projectFileGroup.getSuffix());
+        v.setFileSuffix(projectFileGroup.getSuffix().trim());
         v.setFileExtensionsToIgnore(projectFileGroup.getIgnoreMimetypes());
         v.setIgnoreConfiguredMimetypeAndSuffix(projectFileGroup.isUseOriginalFiles());
         if (projectFileGroup.getName().equals("PRESENTATION")) {
@@ -802,12 +875,13 @@ public class ExportMets {
     private static ImageReader getOpenJpegReader() {
         ImageReader reader;
         try {
-            Object readerSpi = Class.forName("de.digitalcollections.openjpeg.imageio.OpenJp2ImageReaderSpi").newInstance();
+            Object readerSpi = Class.forName("de.digitalcollections.openjpeg.imageio.OpenJp2ImageReaderSpi").getDeclaredConstructor().newInstance();
             reader = ((ImageReaderSpi) readerSpi).createReaderInstance();
         } catch (IOException e) {
             logger.error(e.getMessage(), e);
             return null;
-        } catch (NoClassDefFoundError | ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+        } catch (NoClassDefFoundError | ClassNotFoundException | IllegalAccessException | InstantiationException | IllegalArgumentException
+                | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             logger.warn("No openjpeg reader");
             return null;
         }
