@@ -216,7 +216,7 @@ public class HelperSchritte {
                         myStep.setBearbeitungszeitpunkt(myDate);
                         myStep.setEditTypeEnum(StepEditType.AUTOMATIC);
                         SendMail.getInstance().sendMailToAssignedUser(myStep, StepStatus.OPEN);
-                        HistoryManager.addHistory(myDate, new Integer(myStep.getReihenfolge()).doubleValue(), myStep.getTitel(),
+                        HistoryManager.addHistory(myDate, Integer.valueOf(myStep.getReihenfolge()).doubleValue(), myStep.getTitel(),
                                 HistoryEventType.stepOpen.getValue(), processId);
                         /* wenn es ein automatischer Schritt mit Script ist */
                         if (myStep.isTypAutomatisch()) {
@@ -380,27 +380,24 @@ public class HelperSchritte {
             prefs = po.getRegelsatz().getPreferences();
             Fileformat ff = po.readMetadataFile();
             if (ff == null) {
-                logger.error("Metadata file is not readable for process with ID " + step.getProcessId());
+                logger.info("Metadata file is not readable for process with ID " + step.getProcessId());
                 LogEntry le = new LogEntry();
                 le.setProcessId(step.getProzess().getId());
                 le.setContent("Metadata file is not readable");
                 le.setType(LogType.ERROR);
                 le.setUserName("http step");
                 ProcessManager.saveLogEntry(le);
-                errorStep(step);
-                return;
+            } else {
+                dd = ff.getDigitalDocument();
             }
-            dd = ff.getDigitalDocument();
         } catch (Exception e2) {
-            logger.error("An exception occurred while reading the metadata file for process with ID " + step.getProcessId(), e2);
+            logger.info("An exception occurred while reading the metadata file for process with ID " + step.getProcessId(), e2);
             LogEntry le = new LogEntry();
             le.setProcessId(step.getProzess().getId());
             le.setContent("error reading metadata file");
             le.setType(LogType.ERROR);
             le.setUserName("http step");
             ProcessManager.saveLogEntry(le);
-            errorStep(step);
-            return;
         }
         VariableReplacer replacer = new VariableReplacer(dd, prefs, step.getProzess(), step);
         String bodyStr = null;
@@ -522,7 +519,14 @@ public class HelperSchritte {
                     JsonPrimitive jPrim = objEntry.getValue().getAsJsonPrimitive();
                     if (jPrim.isString()) {
                         String newVal = replacer.replace(jPrim.getAsString());
-                        obj.addProperty(objEntry.getKey(), newVal);
+                        if (VariableReplacer.piiifMasterFolder.matcher(jPrim.getAsString()).matches()
+                                || VariableReplacer.piiifMediaFolder.matcher(jPrim.getAsString()).matches()) {
+                            Gson gson = new Gson();
+                            JsonArray iiifArr = gson.fromJson("[" + newVal + "]", JsonArray.class);
+                            obj.add(objEntry.getKey(), iiifArr);
+                        } else {
+                            obj.addProperty(objEntry.getKey(), newVal);
+                        }
                     }
                 } else {
                     replaceJsonElement(objEntry.getValue(), replacer);
@@ -536,7 +540,14 @@ public class HelperSchritte {
                     JsonPrimitive jPrim = innerJel.getAsJsonPrimitive();
                     if (jPrim.isString()) {
                         String newVal = replacer.replace(jPrim.getAsString());
-                        jArr.set(i, new JsonPrimitive(newVal));
+                        if (VariableReplacer.piiifMasterFolder.matcher(jPrim.getAsString()).matches()
+                                || VariableReplacer.piiifMediaFolder.matcher(jPrim.getAsString()).matches()) {
+                            Gson gson = new Gson();
+                            JsonArray iiifArr = gson.fromJson("[" + newVal + "]", JsonArray.class);
+                            jArr.set(i, iiifArr);
+                        } else {
+                            jArr.set(i, new JsonPrimitive(newVal));
+                        }
                     }
                 } else {
                     replaceJsonElement(innerJel, replacer);
@@ -624,12 +635,14 @@ public class HelperSchritte {
         Process po = step.getProzess();
         Prefs prefs = null;
         prefs = po.getRegelsatz().getPreferences();
-        Fileformat ff = po.readMetadataFile();
-        if (ff == null) {
-            logger.error("Metadata file is not readable for process with ID " + step.getProcessId());
-            throw new ReadException("Metadata file is not readable for process with ID " + step.getProcessId());
+        try {
+            Fileformat ff = po.readMetadataFile();
+            if (ff != null) {
+                dd = ff.getDigitalDocument();
+            }
+        } catch (IOException e) {
+            logger.info(e);
         }
-        dd = ff.getDigitalDocument();
         VariableReplacer replacer = new VariableReplacer(dd, prefs, step.getProzess(), step);
         List<String> parameterList = replacer.replaceBashScript(script);
         return parameterList;
